k8s/api_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server-deploy
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: api-server
          image: calinmarius/api-server:1.0.0
          ports:
            - containerPort: 8761
